--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
         "symfony/flex": "^1.12.0",
         "symfony/framework-bundle": "5.0.*",
         "symfony/monolog-bundle": "^3.0",
+        "symfony/security-bundle": "5.0.*",
         "symfony/stopwatch": "5.0.*",
         "symfony/twig-bundle": "5.0.*",
         "symfony/web-profiler-bundle": "5.0.*",
