--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "ext-iconv": "*",
         "composer/package-versions-deprecated": "1.11.99.4",
         "demontpx/parsedown-bundle": "^3.0",
+        "doctrine/annotations": "^1.0",
         "doctrine/common": "^2",
         "doctrine/doctrine-bundle": "^2",
         "doctrine/doctrine-migrations-bundle": "^2",
@@ -24,6 +25,7 @@
         "nesbot/carbon": "^2.32",
         "nexylan/slack-bundle": "^2.2",
         "php-http/guzzle6-adapter": "^2.0",
+        "phpdocumentor/reflection-docblock": "^5.3",
         "sensio/framework-extra-bundle": "^5.5",
         "stof/doctrine-extensions-bundle": "^1.4",
         "symfony/asset": "5.0.*",
@@ -33,7 +35,10 @@
         "symfony/flex": "^1.12.0",
         "symfony/framework-bundle": "5.0.*",
         "symfony/monolog-bundle": "^3.0",
+        "symfony/property-access": "5.0.*",
+        "symfony/property-info": "5.0.*",
         "symfony/security-bundle": "5.0.*",
+        "symfony/serializer": "5.0.*",
         "symfony/stopwatch": "5.0.*",
         "symfony/twig-bundle": "5.0.*",
         "symfony/web-profiler-bundle": "5.0.*",
