--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
         "symfony/debug-bundle": "5.0.*",
         "symfony/dotenv": "5.0.*",
         "symfony/flex": "^1.12.0",
+        "symfony/form": "5.0.*",
         "symfony/framework-bundle": "5.0.*",
         "symfony/monolog-bundle": "^3.0",
         "symfony/property-access": "5.0.*",
@@ -41,6 +42,7 @@
         "symfony/serializer": "5.0.*",
         "symfony/stopwatch": "5.0.*",
         "symfony/twig-bundle": "5.0.*",
+        "symfony/validator": "5.0.*",
         "symfony/web-profiler-bundle": "5.0.*",
         "symfony/webpack-encore-bundle": "^1.7",
         "symfony/yaml": "5.0.*",
