added image, flysystem and preview img

--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,10 @@
         "doctrine/orm": "^2",
         "http-interop/http-factory-guzzle": "^1.0",
         "knplabs/knp-paginator-bundle": "^5.2",
+        "liip/imagine-bundle": "^2.7",
         "nesbot/carbon": "^2.32",
         "nexylan/slack-bundle": "^2.2",
+        "oneup/flysystem-bundle": "*",
         "php-http/guzzle6-adapter": "^2.0",
         "phpdocumentor/reflection-docblock": "^5.3",
         "sensio/framework-extra-bundle": "^5.5",
