--- a/config/services.yaml
+++ b/config/services.yaml
@@ -7,6 +7,9 @@ parameters:
     app.support_email: '%env(SUPPORT_EMAIL)%'
     app.food_forum_enabled: '%env(bool:FOOD_FORUM_ENABLED)%'
     cache_adapter: cache.adapter.filesystem
+    article_uploads: 'uploads/articles'
+    article_uploads_url: '/%article_uploads%'
+    article_uploads_dir: '%kernel.project_dir%/public/%article_uploads%'
 
 services:
     # default configuration for services in *this* file
@@ -17,7 +20,12 @@ services:
         bind:
             $debug: '%kernel.debug%'
             Demontpx\ParsedownBundle\Parsedown: '@demontpx_parsedown.parsedown'
-            
+
+            League\Flysystem\FilesystemInterface $articleFileSystem: '@oneup_flysystem.uploads_articles_filesystem'
+
+#            App\Service\FileUploader $articleFileUploader: '@file_uploader.article'
+#            App\Service\FileUploader $avatarFileUploader: '@file_uploader.avatar'
+
             
 
     # makes classes in src/ available to be used as services
@@ -34,4 +42,12 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
-        
+
+#    file_uploader.article:
+#        class: App\Service\FileUploader
+#        arguments:
+#            $uploadsPath: '%article_uploads_dir%'
+#    file_uploader.avatar:
+#        class: App\Service\FileUploader
+#        arguments:
+#            $uploadsPath: '%path/to/uploads/avatar%'
