--- a/.env
+++ b/.env
@@ -26,6 +26,9 @@ SLACK_WEBHOOK_URL=https://hooks.slack.com/...
 
 FOOD_FORUM_ENABLED=false
 SUPPORT_EMAIL=support@catcascar.${FOOD_FORUM_ENABLED}
+SITE_BASE_SCHEME=https
+SITE_BASE_HOST=localhost:8000
+SITE_URL=${SITE_BASE_SCHEME}//${SITE_BASE_HOST}
 ###< app env ###
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
@@ -34,3 +37,7 @@ SUPPORT_EMAIL=support@catcascar.${FOOD_FORUM_ENABLED}
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 DATABASE_URL="mysql://skillbox_symfony:skillbox_symfony@127.0.0.1:3306/cat_cas_car?serverVersion=8.0"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/mailer ###
+# MAILER_DSN=smtp://localhost
+###< symfony/mailer ###
