--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -2,3 +2,6 @@ twig:
     default_path: '%kernel.project_dir%/templates'
     form_themes:
         - bootstrap_4_layout.html.twig
+    paths:
+        'assets/images': images
+        'assets/css': css
