--- a/config/services.yaml
+++ b/config/services.yaml
@@ -42,6 +42,10 @@ services:
         resource: '../src/Controller'
         tags: ['controller.service_arguments']
 
+    App\EventListener\ExampleEventListener:
+        tags:
+            - { name: kernel.event_listener, event: kernel.request, method: 'onEventHappen' }
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
 
